# morningai-mvp

./: .env.example  .env.production  .env.sample  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ACCEPTANCE_TEST_REPORT.md  CHANGELOG.md  DEPLOYMENT_PROOF.md  DEPLOY_TRIGGER.md  ENV_Handoff_Checklist.md  FINAL_REPORT.md  MorningAI-MVP_Deep_Dive_Evaluation_Report.md  MorningAI-MVP_Optimization_Report.md  OPERATIONS.md  README.md  README_temp.md  Release_Safeguard_and_Env_Check_Fix_Report.md  SECRETS_MATRIX.csv  data_layer_summary_and_next_steps.md  e2e_smoke_report.json  env.sample  evaluation_notes.md  evidence.json  health_report_20250920_134859.json  next_steps_summary.md  package-lock.json  package.json  rls_security_test_report.json  template_recommendations.md  vercel.json
.github/: pull_request_template.md
apps/api/: .coverage  .env  .flake8  .pre-commit-config.yaml  Dockerfile  JWT_BLACKLIST_REGRESSION_TEST.md  README.md  ROLLBACK_GUIDE.md  alembic.ini  app.py  coverage.xml  pre_deploy_script.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.sh  setup.py  test_auth.py  test_health.py  test_rbac.py  test_user.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20250920_001_initial_schema.py  manual_migration.sql
apps/api/instance/: app.db
apps/api/migrations/: env.py
apps/api/migrations/versions/: 87b87be97882_create_initial_user_and_tenant_tables.py  9ea79b0b648a_create_initial_user_and_tenant_tables.py  e841d82ab059_create_initial_user_and_tenant_tables.py
apps/api/scripts/: seed_admin.py
apps/api/src/: __init__.py  api_docs.py  audit_log.py  auth.py  database.py  database_migration.py  decorators.py  documented_routes.py  main.py  models.py  monitoring_integration.py  simple_docs.py
apps/api/src/database/: app.db
apps/api/src/instance/: app.db
apps/api/src/models/: audit_log.py  jwt_blacklist.py  tenant.py  user.py  webhook.py
apps/api/src/routes/: admin.py  audit_log.py  auth.py  email_verification.py  jwt_blacklist.py  tenant.py  two_factor.py  webhook.py
apps/api/src/services/: email_service.py  two_factor_service.py  webhook_service.py
apps/api/src/static/: index.html
apps/api/src/tests/: test_integration.py  test_security.py
apps/api/tests/: test_2fa.py  test_audit_logs.py  test_comprehensive_coverage.py  test_coverage_boost.py  test_decorators.py  test_email_verification.py  test_jwt_blacklist.py  test_rbac.py  test_security_modules.py  test_user_routes.py
artifacts/: admin_blacklist_test.txt  health_check.txt
docs/: 2fa_summary.md  ARCHITECTURE.md  CODE_QUALITY.md  DEVELOPER_GUIDE.md  ENVIRONMENT_VARIABLES.md  PHASE3_PLAN.md  PROJECT_OVERVIEW.md  RLS_POLICIES.md  account_lockout.md  audit_logging.md  blueprint.md  ci_cd_setup.md  cto_review.md  deployment_guide.md  email_verification.md  jwt_blacklist.md  oauth_summary.md  optimized_roadmap.md  rbac_summary.md  sample_doc.md  secrets_matrix.md  security_short_term_notes.md  tasks.md
infra/: .gitignore  api.Dockerfile  docker-compose.yml  web.Dockerfile
monitoring/: continuous_monitoring.py  dashboard.py  health_check.py  metrics_config.py  monitoring_config.json
scripts/: check_env.mjs  ci_test_suite.py  code-quality.sh  e2e_smoke_test.py  env_guard.py  fix_database_schema.py  link_docs.py  (+3 more)
(+69 files in other folders)
